ARROW-9476: [C++][Dataset] Fix incorrect dictionary association in HivePartitioningFactory